--- a/config/models.yaml
+++ b/config/models.yaml
@@ -2,7 +2,7 @@ models:
   # --- Google Models ---
   gemini_pro_creative:
     provider: "google"
-    model_name: "gemini-1.5-pro-latest"
+    model_name: "gemini-2.5-pro"
     api_key_env: "GOOGLE_API_KEY"
     generation_config:
       temperature: 0.9
@@ -10,7 +10,7 @@ models:
 
   gemini_flash_strict:
     provider: "google"
-    model_name: "gemini-1.5-flash-latest"
+    model_name: "gemini-2.5-flash"
     api_key_env: "GOOGLE_API_KEY"
     generation_config:
       temperature: 0.0
