feat(evaluation): Update thresholds for AI critique in grumpy pirate test cases

--- a/evaluations/test_cases/edit_grumpy_pirate.yaml
+++ b/evaluations/test_cases/edit_grumpy_pirate.yaml
@@ -30,3 +30,11 @@ inputs:
 assertions:
   - type: "is_valid_pydantic_schema"
     schema: "ChainOfThoughtCharacterSchema"
+
+  - type: "ai_critique"
+    prompt_path: "evaluations/critique_prompts/check_creativity_scored.txt"
+    critique_model: "gemini_flash_strict"
+    thresholds:
+      creativity: 3
+      depth: 3
+      originality: 3
